@@ -195,6 +195,8 @@
 	{prefix}/share/doc/vifm, otherwise they are not available after
 	installation.
 
+	Break ties on case insensitive sort deterministically.
+
 	Fixed search messages in menus (nth time...).
 
 	Fixed automatic finishing in some situation when no terminal is available.
